[package]
name = "keyfinder"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Toy project from https://github.com/dtolnay/cxx"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/dtolnay/cxx"

[dependencies]
cxx = "1.0"

[build-dependencies]
cmake = "0.1.50"
cxx-build = "1.0"
pkg-config = "0.3.30"
